Build out html contents

--- a/index.html
+++ b/index.html
@@ -1,13 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>The Odin Project - Admin Dashboard</title>
-</head>
-<body>
-
-</body>
+  </head>
+  <body>
+    <section class="header">
+      <div class="header-top">
+        <p class="search-bar">Search Bar</p>
+        <p class="notification-icon">Notification Icon</p>
+        <p class="logo">Logo</p>
+        <p class="header-name">Morgan Oakley</p>
+      </div>
+      <div class="header-bottom">
+        <p class="logo">Logo</p>
+        <p class="greeting">Hi there,</p>
+        <p class="greeting-name">Morgan Oakley (@morgan)</p>
+        <p class="button">New</p>
+        <p class="button">Upload</p>
+        <p class="button">Share</p>
+      </div>
+    </section>
+    <section class="sidebar">
+      <p class="dashboard-icon">Dashboard</p>
+      <p class="home-icon">Home</p>
+      <p class="profile-icon">Profile</p>
+      <p class="messages-icon">Messages</p>
+      <p class="history-icon">History</p>
+      <p class="tasks-icon">Tasks</p>
+      <p class="communities-icon">Communities</p>
+      <p class="settingsicon">Settings</p>
+      <p class="support-icon">Support</p>
+      <p class="privacy-icon">Privacy</p>
+    </section>
+    <section class="main-content">
+      <section class="projects">
+        <h2>Your Projects</h2>
+        <div class="project-card">
+          <h2>Super Cool Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+        <div class="project-card">
+          <h2>Less Cool Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+        <div class="project-card">
+          <h2>Impossible App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+        <div class="project-card">
+          <h2>Easy Peasy App</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+        <div class="project-card">
+          <h2>Ad Blocker</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+        <div class="project-card">
+          <h2>Money Maker</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et,
+            dolore.
+          </p>
+        </div>
+      </section>
+      <section class="announcements">
+        <h1>Announcements</h1>
+        <div class="announcement">
+          <h3 class="announcement-header">Site Maintenance</h3>
+          <p class="announcement-details">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            sit reprehenderit quibusdam consequuntur aliquid sequi.
+          </p>
+        </div>
+        <div class="announcement">
+          <h3 class="announcement-header">Community Share Day</h3>
+          <p class="announcement-details">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            sit reprehenderit quibusdam consequuntur aliquid sequi.
+          </p>
+        </div>
+        <div class="announcement">
+          <h3 class="announcement-header">Updated Privacy Policy</h3>
+          <p class="announcement-details">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+            sit reprehenderit quibusdam consequuntur aliquid sequi.
+          </p>
+        </div>
+      </section>
+      <section class="trending">
+        <h1>Trending</h1>
+        <div class="trending-card">
+          <div class="trending-item">
+            <p class="trending-image">Image</p>
+            <p class="trending-user">@tegan</p>
+            <p class="trending-detail">World Peace Builder</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <div class="trending-item">
+            <p class="trending-image">Image</p>
+            <p class="trending-user">@tmorgan</p>
+            <p class="trending-detail">Super Cool Project</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <div class="trending-item">
+            <p class="trending-image">Image</p>
+            <p class="trending-user">@kendall</p>
+            <p class="trending-detail">Life Changing App</p>
+          </div>
+        </div>
+        <div class="trending-card">
+          <div class="trending-item">
+            <p class="trending-image">Image</p>
+            <p class="trending-user">@alex</p>
+            <p class="trending-detail">No Traffic Maker</p>
+          </div>
+        </div>
+      </section>
+    </section>
+  </body>
 </html>
