Added content to sidebar

--- a/index.html
+++ b/index.html
@@ -25,16 +25,74 @@
       </div>
     </section>
     <section class="sidebar">
-      <p class="dashboard-icon">Dashboard</p>
-      <p class="home-icon">Home</p>
-      <p class="profile-icon">Profile</p>
-      <p class="messages-icon">Messages</p>
-      <p class="history-icon">History</p>
-      <p class="tasks-icon">Tasks</p>
-      <p class="communities-icon">Communities</p>
-      <p class="settingsicon">Settings</p>
-      <p class="support-icon">Support</p>
-      <p class="privacy-icon">Privacy</p>
+      <div class="dashboard-div">
+        <img
+          class="dashboard-icon"
+          src="./images/view-dashboard.svg"
+          alt="dashboard-icon"
+        />
+        <p class="dashboard-text">Dashboard</p>
+      </div>
+      <div classs="home-div">
+        <img class="home-icon" src="./images/home.svg" alt="home-icon" />
+        <p class="home-text">Home</p>
+      </div>
+      <div class="profile-div">
+        <img
+          class="profile-icon"
+          src="./images/account-card.svg"
+          alt="profile-icon"
+        />
+        <p class="profile-text">Profile</p>
+      </div>
+      <div class="messages-div">
+        <img
+          class="message-icon"
+          src="./images/message-text-outline.svg"
+          alt="messages-icon"
+        />
+        <p class="messages-text">Messages</p>
+      </div>
+      <div class="history-div">
+        <img
+          class="history-icon"
+          src="./images/timer-sand-empty.svg"
+          alt="history-icon"
+        />
+        <p class="history-text">History</p>
+      </div>
+      <div class="tasks-div">
+        <img
+          class="tasks-icon"
+          src="./images/note-multiple-outline.svg"
+          alt="tasks-icon"
+        />
+        <p class="tasks-text">Tasks</p>
+      </div>
+      <div class="communities-div">
+        <img
+          class="communities-icon"
+          src="./images/account-group-outline.svg"
+          alt="communities-icon"
+        />
+        <p class="communities-text">Communities</p>
+      </div>
+      <div class="settings-div">
+        <img class="settings-icon" src="./images/cog.svg" alt="seetings-icon" />
+        <p class="settings-text">Settings</p>
+      </div>
+      <div class="support-div">
+        <img
+          class="support-icon"
+          src="./images/help-box-outline.svg"
+          alt="support-icon"
+        />
+        <p class="support-text">Support</p>
+      </div>
+      <div class="privacy-div">
+        <img class="privacy-icon" src="./images/lock.svg" alt="privacy-icon" />
+        <p class="privacy-text">Privacy</p>
+      </div>
     </section>
     <section class="main-content">
       <section class="projects">
