--- a/index.html
+++ b/index.html
@@ -10,15 +10,36 @@
   <body>
     <section class="header">
       <div class="header-top">
-        <p class="search-bar">Search Bar</p>
-        <p class="notification-icon">Notification Icon</p>
-        <p class="logo">Logo</p>
+        <label for="search">
+          <img
+            class="search-icon"
+            src="./images/magnify.svg"
+            alt="search-icon"
+          />
+        </label>
+        <input type="text" name="search" id="search" />
+        <img
+          class="notification-icon"
+          src="./images/bell-outline.svg"
+          alt="notificaiton-icon"
+        />
+        <img
+          class="account-icon"
+          src="./images/account-logo-koala.jpg"
+          alt="account logo - a koala"
+        />
         <p class="header-name">Morgan Oakley</p>
       </div>
       <div class="header-bottom">
-        <p class="logo">Logo</p>
+        <img
+          class="header-account-icon"
+          src="./images/account-logo-koala.jpg"
+          alt="account logo - a koala"
+        />
+        <div clas="account-banner">
         <p class="greeting">Hi there,</p>
         <p class="greeting-name">Morgan Oakley (@morgan)</p>
+        </div>
         <p class="button">New</p>
         <p class="button">Upload</p>
         <p class="button">Share</p>
