--- a/index.html
+++ b/index.html
@@ -171,58 +171,62 @@
           </div>
         </section>
       </section>
-      <section class="announcements">
+      <section class="announcements-section">
         <h1>Announcements</h1>
-        <div class="announcement">
-          <h3 class="announcement-header">Site Maintenance</h3>
-          <p class="announcement-details">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            sit reprehenderit quibusdam consequuntur aliquid sequi.
-          </p>
-        </div>
-        <div class="announcement">
-          <h3 class="announcement-header">Community Share Day</h3>
-          <p class="announcement-details">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            sit reprehenderit quibusdam consequuntur aliquid sequi.
-          </p>
-        </div>
-        <div class="announcement">
-          <h3 class="announcement-header">Updated Privacy Policy</h3>
-          <p class="announcement-details">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-            sit reprehenderit quibusdam consequuntur aliquid sequi.
-          </p>
+        <div class="announcements-cards">
+          <div class="announcement-card">
+            <h3 class="announcement-header">Site Maintenance</h3>
+            <p class="announcement-details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Veritatis, sit reprehenderit quibusdam consequuntur aliquid sequi.
+            </p>
+          </div>
+          <div class="announcement-card">
+            <h3 class="announcement-header">Community Share Day</h3>
+            <p class="announcement-details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Veritatis, sit reprehenderit quibusdam consequuntur aliquid sequi.
+            </p>
+          </div>
+          <div class="announcement-card">
+            <h3 class="announcement-header">Updated Privacy Policy</h3>
+            <p class="announcement-details">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Veritatis, sit reprehenderit quibusdam consequuntur aliquid sequi.
+            </p>
+          </div>
         </div>
       </section>
       <section class="trending">
         <h1>Trending</h1>
-        <div class="trending-card">
-          <div class="trending-item">
-            <p class="trending-image">Image</p>
-            <p class="trending-user">@tegan</p>
-            <p class="trending-detail">World Peace Builder</p>
+        <div class="trending-cards">
+          <div class="trending-card">
+            <div class="trending-item">
+              <p class="trending-image">Image</p>
+              <p class="trending-user">@tegan</p>
+              <p class="trending-detail">World Peace Builder</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <div class="trending-item">
-            <p class="trending-image">Image</p>
-            <p class="trending-user">@tmorgan</p>
-            <p class="trending-detail">Super Cool Project</p>
+          <div class="trending-card">
+            <div class="trending-item">
+              <p class="trending-image">Image</p>
+              <p class="trending-user">@tmorgan</p>
+              <p class="trending-detail">Super Cool Project</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <div class="trending-item">
-            <p class="trending-image">Image</p>
-            <p class="trending-user">@kendall</p>
-            <p class="trending-detail">Life Changing App</p>
+          <div class="trending-card">
+            <div class="trending-item">
+              <p class="trending-image">Image</p>
+              <p class="trending-user">@kendall</p>
+              <p class="trending-detail">Life Changing App</p>
+            </div>
           </div>
-        </div>
-        <div class="trending-card">
-          <div class="trending-item">
-            <p class="trending-image">Image</p>
-            <p class="trending-user">@alex</p>
-            <p class="trending-detail">No Traffic Maker</p>
+          <div class="trending-card">
+            <div class="trending-item">
+              <p class="trending-image">Image</p>
+              <p class="trending-user">@alex</p>
+              <p class="trending-detail">No Traffic Maker</p>
+            </div>
           </div>
         </div>
       </section>
